[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "SOPRANO"
description = "SOPRANO: Selection On PRotein ANnotated regiOns"
readme = "README.md"
authors = [
    { name = "Luis Zapata", email = "Luis.Zapata@icr.ac.uk" },
    { name = "ICR Scientific Software Group", email = "scientificcomputingteam@icr.ac.uk"},
]
maintainers = [
    { name = "Luis Zapata", email = "Luis.Zapata@icr.ac.uk" },
    { name = "ICR Scientific Software Group", email = "scientificcomputingteam@icr.ac.uk"},
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "streamlit == 1.27.0"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Perl",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "isort",
    "pre-commit",
    "mypy"
]
ci = [
    "black",
    "pytest",
    "pytest-dependency",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/instituteofcancerresearch/SOPRANO"
"Bug Tracker" = "https://github.com/instituteofcancerresearch/SOPRANO/issues"
Discussions = "https://github.com/bkmarzouk/symflation/discussions"

[project.scripts]
RUN_SOPRANO = "SOPRANO.run_local_ssb_selection:main"
GET_GENOMES = "SOPRANO.run_local_ssb_selection:download_genome"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/SOPRANO/version.py"

[tool.black]
skip-string-normalization = false
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
