[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "SOPRANO"
description = "SOPRANO: Selection On PRotein ANnotated regiOns"
readme = "README.md"
authors = [
    { name = "Luis Zapata", email = "Luis.Zapata@icr.ac.uk" },
    { name = "ICR Scientific Software Group", email = "scientificcomputingteam@icr.ac.uk" },
]
maintainers = [
    { name = "Luis Zapata", email = "Luis.Zapata@icr.ac.uk" },
    { name = "ICR Scientific Software Group", email = "scientificcomputingteam@icr.ac.uk" },
]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "streamlit >= 1.27.0",
    "requests",
    "types-requests",
    "clint",
    "pytest"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Perl",
    "Programming Language :: R",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "isort",
    "pre-commit",
    "mypy"
]
ci = [
    "black",
    "pytest",
    "pytest-dependency",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/instituteofcancerresearch/SOPRANO"
"Bug Tracker" = "https://github.com/instituteofcancerresearch/SOPRANO/issues"
Discussions = "https://github.com/instituteofcancerresearch/SOPRANO/discussions"

[project.scripts]
soprano-run = "SOPRANO.run:run_cli"
soprano-app = "SOPRANO.run:run_app"
soprano-get-genome = "SOPRANO.run:download_genome"
soprano-link-vep = "SOPRANO.run:link_vep_cache"
soprano-hla2ip = "SOPRANO.run:hla2pip"
soprano-annotate = "SOPRANO.run:annotate_vcfs"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/SOPRANO/version.py"

[tool.black]
skip-string-normalization = false
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
